--- a/Setup/Product.wxs
+++ b/Setup/Product.wxs
@@ -4,7 +4,7 @@
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
     <PropertyRef Id="NETFRAMEWORK40CLIENT"/>
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-    <MediaTemplate />
+    <MediaTemplate EmbedCab="yes" />
 
     <Feature Id="ProductFeature" Title="EventlogToSyslog.NET" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
